# fastapi-note-tree

./: README.md  docker-compose.yaml
backend/note-service/: pyproject.toml  requirements.txt
backend/note-service/app/: main.py  schemas.py
backend/note-service/app/api/: __init__.py  deps.py  notes.py
backend/note-service/app/core/: config.py  db.py  security.py
backend/structure-service/: Dockerfile  pyproject.toml
backend/structure-service/app/: main.py  nodes.py  schemas.py
backend/structure-service/app/api/: __init__.py  deps.py
backend/structure-service/app/api/endpoints/: notes.py  projects.py  structure.py
backend/structure-service/app/core/: config.py  db.py
backend/user-service/: pyproject.toml
backend/user-service/app/: main.py
