[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["irumako <irumakoTS@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.3"
python-keycloak = "^4.0.0"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
